force-app/main/default/objects/CRMfusionDBR101__Duplicate_Blocked__e/CRMfusionDBR101__Duplicate_Blocked__e.object-meta.xml
<CustomObject>
    <description>Duplicate record creation blocked by DupeBlocker.</description>
    <label>Duplicate Blocked</label>
    <pluralLabel>Duplicates Blocked</pluralLabel>
</CustomObject>