force-app/main/default/objects/CRMfusionDBR101__Duplicate_Blocked__e/fields/CRMfusionDBR101__Duplicates_Data__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Duplicates_Data__c</fullName>
    <description>JSON string containing matching groups for blocks and matching Ids &amp; Names for redirects.</description>
    <label>Duplicates Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>