force-app/main/default/objects/CRMfusionDBR101__Duplicate_Blocked__e/fields/CRMfusionDBR101__Scenario_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Scenario_Id__c</fullName>
    <description>Id of the scenario that triggered the block.</description>
    <label>Scenario Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>