force-app/main/default/objects/CRMfusionDBR101__Duplicate_Blocked__e/fields/CRMfusionDBR101__User_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__User_Id__c</fullName>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>