force-app/main/default/objects/CRMfusionDBR101__Duplicate_Blocked__e/fields/CRMfusionDBR101__User_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__User_Name__c</fullName>
    <label>User Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>